# API/CoffeeClub.Domain/Dtos/Response/UserProfileDto.cs
@@ -1,0 +1,6 @@
+namespace CoffeeClub.Domain.Dtos.Response;
+
+public record UserProfileDto
+{
+    public bool IsWorker { get; init; }
+}
